Font size fixes and alignment

--- a/style.css
+++ b/style.css
@@ -136,21 +136,20 @@ nav.fa{
 
 /*------contact us page-------------------------*/
 .ContacTitle{
-    max-width:80%;
+    width:100%;
     margin:auto;
     padding-top:20px;
-    font-size: 24px;
+    font-size: 26px;
     text-align: center;
     color:white;
 }
 .mail-box{
-    margin:auto;
-    width:100%;
+    text-align:justify;
+    justify-content: space-between;
     max-width:80%;
-    padding-top: 20px;
-    text-align:center;
-    color: white;
-    font-size: 20px;
+    margin:auto;
+    color:white;
+    font-size: 16px;
 }
 .contact{
     margin:10px auto;
